Added answer to question of ART by Queue

--- a/fa23-team-d/notebooks/base-questions.ipynb
+++ b/fa23-team-d/notebooks/base-questions.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,6 +47,7 @@
     "        return f'{x:.0f}'\n",
     "\n",
     "def convert_from_seconds(sec, to = 'days'):\n",
+    "    sec = sec.total_seconds()\n",
     "    match to:\n",
     "        case 'months':\n",
     "            return sec / 60 / 60 / 24 / 30\n",
@@ -59,7 +60,13 @@
     "        case 'seconds':\n",
     "            return sec\n",
     "        case _:\n",
-    "            raise ValueError(f'Unknown unit {to}')\n"
+    "            raise ValueError(f'Unknown unit {to}')\n",
+    "\n",
+    "def assign_grouping(value,values):\n",
+    "  for group in values:\n",
+    "    if group in value:\n",
+    "      return group\n",
+    "  return 'Other'"
    ]
   },
   {
@@ -521,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -538,7 +545,7 @@
        "Name: resolution_time, dtype: object"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -557,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -574,7 +581,7 @@
        "Name: resolution_time, dtype: object"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -620,18 +627,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a17bc99429304edbb3693f53bff440a7",
+       "model_id": "b01e4e1b72c54292a96819634aa52bfb",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(RadioButtons(options=('PWDx', 'BTDT', 'INFO', 'ISD', 'PARK', 'PROP', 'BWSC', 'DISB', 'No Q', 'B…"
+       "HBox(children=(RadioButtons(layout=Layout(display='flex', flex_flow='row'), options=('PWDx', 'BTDT', 'PARK', '…"
       ]
      },
      "metadata": {},
@@ -640,7 +647,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "51ca48a4203f47d6b3541663ce54474e",
+       "model_id": "72e98901664a4e378fd6fea69f338df6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -654,21 +661,43 @@
    ],
    "source": [
     "department_radio_buttons = widgets.RadioButtons(\n",
-    "    options = df.department.unique()\n",
+    "    options = ['PWDx','BTDT','PARK','INFO','ISD','Other'],\n",
+    "    layout=widgets.Layout(display='flex',flex_flow='row')\n",
     ")\n",
     "\n",
     "plot_button = widgets.Button(description='Plot')\n",
     "\n",
     "def plot():\n",
+    "    def plot_pwd():\n",
+    "        plt.title(f'311 Requests by Queue for PWDx Department')\n",
+    "        group = ['Recycling','District','Street Light','Highway','Snow','Repair','Complaint','Litter Basket','Engineering']\n",
+    "        only_department_group = df.loc[df['department'] == department].copy(deep=True)\n",
+    "        only_department_group['queue_group'] = only_department_group['queue'].apply(lambda entry: assign_grouping(entry,group))\n",
+    "        average_resolution_times = only_department_group.groupby('queue_group')['resolution_time'].mean().reset_index()\n",
+    "\n",
+    "        fig = sns.barplot(average_resolution_times,y='queue_group',x=average_resolution_times['resolution_time'].apply(convert_from_seconds),order=average_resolution_times.sort_values(by='resolution_time',ascending=False)['queue_group'])\n",
+    "        plt.title(f'Average Resolution Time for {department} Department')\n",
+    "        fig.bar_label(fig.containers[0],fmt='%.2f',fontsize=12)\n",
+    "        fig.set(xlabel='Average number of days spent on request resolution')\n",
+    "        plt.show()\n",
+    "    \n",
+    "    def plot_department(departments):\n",
+    "        average_resolution_times = df.loc[df['department'].isin(departments)].groupby('queue')['resolution_time'].mean().reset_index()\n",
+    "        fig = sns.barplot(average_resolution_times, y='queue',x=average_resolution_times['resolution_time'].apply(convert_from_seconds),order=average_resolution_times.sort_values(by='resolution_time',ascending=False)['queue'])\n",
+    "        plt.title('Average Resolution Time for BTDT Department')\n",
+    "        fig.bar_label(fig.containers[0],fmt='%.2f',fontsize=12)\n",
+    "        fig.set(xlabel='Average number of days spent on request resolution')\n",
+    "        plt.show()\n",
+    "    \n",
     "    department = department_radio_buttons.value\n",
     "    \n",
-    "    filtered = df[df.department == department]\n",
-    "    \n",
-    "    fig = sns.countplot(data = filtered, x = 'queue')\n",
-    "    \n",
-    "\n",
-    "    plt.show()\n",
-    "\n",
+    "    match department:\n",
+    "        case 'PWDx':\n",
+    "            plot_pwd()\n",
+    "        case 'Other':\n",
+    "            plot_department(df[~df['department'].isin(['PWDx','BTDT','PARK','INFO','ISD'])]['department'].unique())\n",
+    "        case _:\n",
+    "            plot_department([department])\n",
     "\n",
     "output_queue = widgets.Output()\n",
     "\n",
@@ -680,57 +709,7 @@
     "plot_button.on_click(on_button_clicked)\n",
     "display(widgets.HBox([department_radio_buttons,plot_button]))\n",
     "display(output_queue)\n",
-    "on_button_clicked()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "55f795107be7471a809f223a09265fa8",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "def plot():\n",
-    "    out = widgets.Output()\n",
-    "\n",
-    "    def assign_grouping(value,values):\n",
-    "        for group in values:\n",
-    "            if group in value:\n",
-    "                return group\n",
-    "        return 'Other'\n",
-    "\n",
-    "    def plot_graph(df,department,group):\n",
-    "        with out:\n",
-    "            only_department_group = df.loc[df['department'] == department].copy(deep=True)\n",
-    "            only_department_group['queue_group'] = only_department_group['queue'].apply(lambda entry: assign_grouping(entry,group))\n",
-    "\n",
-    "            average_resolution_times = only_department_group.groupby('queue_group')['resolution_time'].mean().reset_index()\n",
-    "\n",
-    "            plt.title(f'Average Resolution Time by Queue Group for {department}')\n",
-    "            fig = sns.barplot(average_resolution_times,y='queue_group',x=average_resolution_times['resolution_time'].apply(convert_from_seconds),order=average_resolution_times.sort_values(by='resolution_time',ascending=False)['queue_group'])\n",
-    "            fig.bar_label(fig.containers[0], fmt='%.2f', label_type='edge', fontsize=12)\n",
-    "            fig.set(xlabel='Average Resolution Time (Days)',ylabel='Queue Group')\n",
-    "            plt.show()\n",
-    "\n",
-    "    \n",
-    "    plot_graph(df,'PWDx', ['Recycling','District','Street Light','Highway','Snow','Repair','Complaint','Litter Basket','Engineering'])\n",
-    "    display(out)\n",
-    "\n",
-    "plot()"
+    "plot_button.click()"
    ]
   },
   {
@@ -804,10 +783,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "938023eba20c40099c79aa07d441eb57",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(description='Plot Graph', style=ButtonStyle())"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "data_x = [1, 2, 3, 4, 5]\n",
+    "data_y = [2, 4, 6, 8, 10]\n",
+    "\n",
+    "def plot_seaborn_graph(button):\n",
+    "    # Clear the previous figure\n",
+    "    plt.clf()\n",
+    "\n",
+    "    # Create a new Seaborn plot\n",
+    "    fig, ax = plt.subplots()\n",
+    "\n",
+    "    # Plot the data using Seaborn\n",
+    "    sns.lineplot(x=data_x, y=data_y, ax=ax)\n",
+    "\n",
+    "    # Set labels and title\n",
+    "    ax.set_xlabel(\"X-axis\")\n",
+    "    ax.set_ylabel(\"Y-axis\")\n",
+    "    ax.set_title(\"Example Seaborn Graph\")\n",
+    "\n",
+    "    # Show the plot\n",
+    "    plt.show()\n",
+    "\n",
+    "# Create a button to trigger the function\n",
+    "button = widgets.Button(description=\"Plot Graph\")\n",
+    "button.on_click(plot_seaborn_graph)\n",
+    "\n",
+    "# Display the button\n",
+    "display(button)"
+   ]
   },
   {
    "cell_type": "code",
