--- a/fa23-team-d/notebooks/base-questions.ipynb
+++ b/fa23-team-d/notebooks/base-questions.ipynb
@@ -338,7 +338,7 @@
     "\n",
     "\n",
     "    fig.bar_label(fig.containers[0], fmt=fmt, label_type='edge')\n",
-    "    fig.set(xlabel='Case Title', ylabel='Number of Requests')\n",
+    "    fig.set(xlabel='Number of Requests', ylabel='Case Title')\n",
     "\n",
     "    if years[0] == years[1]:\n",
     "        plt.title(f'Top {n} Requests in {years[0]}')\n",
